[package]
name = "stripper-xml"
version = "0.4.0"
description = "(De-)Serialisation for the XML format used by STRIPPER"
authors = ["Andreas Maier <andreas.martin.maier@desy.de>"]
edition = "2021"
license = "GPL-3.0-or-later"
# readme = "Readme.md"
keywords = ["physics"]
categories = ["science", "parser-implementations"]
repository = "https://github.com/a-maier/stripper-xml"

[dependencies]
hepmc2 = { version = "0.5", optional = true }
itertools = "0.11"
particle_id = { version = "0.4", features = ["serde"] }
quick-xml = { version = "0.30", features = ["serialize"] }
serde = { version = "1.0", features = ["serde_derive"] }
serde_repr = "0.1"
strum = { version = "0.25", features = ["derive", "strum_macros"] }
thiserror = "1.0"
